// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Terms Should create term in code with definition template 1`] = `
<dfn class="yfm yfm-term_dfn"
     id=":html_element"
     role="dialog"
>
  <p>
    The HyperText Markup Language or
    <strong>
      HTML
    </strong>
    is the standard markup language for documents designed to be displayed in a web browser.
  </p>
</dfn>
<h1>
  Web
</h1>
<div class="yfm-clipboard">
  <pre>
    <code class="hljs">
      <i class="yfm yfm-term_title"
         term-key=":html"
         id
      >
        HTML
      </i>
      : Lorem
    </code>
  </pre>
  <button class="yfm-clipboard-button">
    <svg width="16"
         height="16"
         viewbox="0 0 24 24"
         class="yfm-clipboard-icon"
         data-animation="8"
    >
      <path fill="currentColor"
            d="M19,21H8V7H19M19,5H8A2,2 0 0,0 6,7V21A2,2 0 0,0 8,23H19A2,2 0 0,0 21,21V7A2,2 0 0,0 19,5M16,1H4A2,2 0 0,0 2,3V17H4V3H16V1Z"
      >
      </path>
      <path stroke="currentColor"
            fill="transparent"
            stroke-width="1.5"
            d="M9.5 13l3 3l5 -5"
            visibility="hidden"
      >
        <animate id="visibileAnimation-8"
                 attributename="visibility"
                 from="hidden"
                 to="visible"
                 dur="0.2s"
                 fill="freeze"
                 begin
        >
        </animate>
        <animate id="hideAnimation-8"
                 attributename="visibility"
                 from="visible"
                 to="hidden"
                 dur="1s"
                 begin="visibileAnimation-8.end+1"
                 fill="freeze"
        >
        </animate>
      </path>
    </svg>
  </button>
</div>
`;

exports[`Terms Should create term in table with definition template 1`] = `
<dfn class="yfm yfm-term_dfn"
     id=":html_element"
     role="dialog"
>
  <p>
    The HyperText Markup Language or
    <strong>
      HTML
    </strong>
    is the standard markup language for documents designed to be displayed in a web browser.
  </p>
</dfn>
<h1>
  Web
</h1>
<table>
  <thead>
    <tr>
      <th>
        Language
      </th>
      <th style="text-align:center">
        Initial release
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        <i class="yfm yfm-term_title"
           term-key=":html"
           role="button"
           aria-describedby=":html_element"
           tabindex="0"
           id
        >
          HTML
        </i>
      </td>
      <td style="text-align:center">
        1993
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Terms Should create term in text with definition template 1`] = `
<dfn class="yfm yfm-term_dfn"
     id=":html_element"
     role="dialog"
>
  <p>
    The HyperText Markup Language or
    <strong>
      HTML
    </strong>
    is the standard markup language for documents designed to be displayed in a web browser.
  </p>
</dfn>
<h1>
  Web
</h1>
<p>
  The
  <i class="yfm yfm-term_title"
     term-key=":html"
     role="button"
     aria-describedby=":html_element"
     tabindex="0"
     id
  >
    HTML
  </i>
  specification
</p>
`;

exports[`Terms Term should use content from include 1`] = `
<dfn class="yfm yfm-term_dfn"
     id=":html_element"
     role="dialog"
>
  <p>
    The HyperText Markup Language or
    <strong>
      HTML
    </strong>
    is the standard markup language for documents designed to be displayed in a web browser.
  </p>
</dfn>
<h1>
  Web
</h1>
<p>
  The
  <i class="yfm yfm-term_title"
     term-key=":html"
     role="button"
     aria-describedby=":html_element"
     tabindex="0"
     id
  >
    HTML
  </i>
  specification
</p>
`;

exports[`Terms Term should use escape regexp like chars 1`] = `
<div class="yfm-clipboard">
  <pre>
    <code class="hljs">
      code
    </code>
  </pre>
  <button class="yfm-clipboard-button">
    <svg width="16"
         height="16"
         viewbox="0 0 24 24"
         class="yfm-clipboard-icon"
         data-animation="0"
    >
      <path fill="currentColor"
            d="M19,21H8V7H19M19,5H8A2,2 0 0,0 6,7V21A2,2 0 0,0 8,23H19A2,2 0 0,0 21,21V7A2,2 0 0,0 19,5M16,1H4A2,2 0 0,0 2,3V17H4V3H16V1Z"
      >
      </path>
      <path stroke="currentColor"
            fill="transparent"
            stroke-width="1.5"
            d="M9.5 13l3 3l5 -5"
            visibility="hidden"
      >
        <animate id="visibileAnimation-0"
                 attributename="visibility"
                 from="hidden"
                 to="visible"
                 dur="0.2s"
                 fill="freeze"
                 begin
        >
        </animate>
        <animate id="hideAnimation-0"
                 attributename="visibility"
                 from="visible"
                 to="hidden"
                 dur="1s"
                 begin="visibileAnimation-0.end+1"
                 fill="freeze"
        >
        </animate>
      </path>
    </svg>
  </button>
</div>
<p>
  <i class="yfm yfm-term_title"
     term-key=":*"
     role="button"
     aria-describedby=":*_element"
     tabindex="0"
     id
  >
    *
  </i>
</p>
<dfn class="yfm yfm-term_dfn"
     id=":*_element"
     role="dialog"
>
  <ul>
    <li>
    </li>
  </ul>
</dfn>
`;
